syntax = "proto3";

package authentication;

option go_package = "./pkg/authentication/pb";

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message SignUpResponse {
  int64 status = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string access_token = 2;
  string refresh_token = 3;
}